<resources>
    <string name="app_name">网络探探</string>
    <string name="ping">Ping</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="speedometer">Speedometer</string>
    <string name="prob">Probing</string>
    <string name="details">Details</string>
    <string name="begin_test">Begin Test</string>
    <string name="back">Back</string>
    <string name="test">Test</string>
    <string name="rtt">Rtt</string>
    <string name="ms">ms</string>
    <string name="mbps">Mbps</string>
</resources>
