<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hack.com.tantan.second.DetailActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary2"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_data_table"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ping"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/pingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 ms"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/chartPing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/download"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/downloadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 Mbps"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/chartDownload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/upload"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/uploadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 Mbps"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/chartUpload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/ll_data_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@mipmap/speedometer"
        android:contentDescription="@string/speed_table" />

    <ImageView
        android:id="@+id/img_toolbar"
        app:layout_constraintTop_toBottomOf="@id/ll_data_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@mipmap/bar"
        android:contentDescription="@string/speed_table" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:text="@string/prob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:shadowRadius="15"
        />

</android.support.constraint.ConstraintLayout>
