<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hack.com.tantan.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary2"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@mipmap/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="RTT"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_rtt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.00 Ms"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_rtt_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="LossRate"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_dw_loss_rate_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_dw_loss_rate_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/upload"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.00 Mbps"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_upload_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/download"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.00 Mbps"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_download_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/speedometer"
                app:srcCompat="@mipmap/speedometer" />


            <ImageView
                android:id="@+id/img_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/speedometer"
                app:srcCompat="@mipmap/bar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_start"
                    style="@style/BottomButton"
                    android:layout_weight="1"
                    android:text="@string/begin_test" />

                <Button
                    android:id="@+id/btn_detail"
                    style="@style/BottomButton"
                    android:layout_weight="1"
                    android:text="@string/details" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
